# myriad

./: .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/: infrastructure.md
.claude/commands/: commit.md  lint.md  migrate.md  pr.md  sync.md  test.md
.claude/integrations/: libvirt.md  opnsense.md  unifi.md
config/: myriad.toml  secrets.toml.example
migrations/: env.py
migrations/versions/: 001_initial.py  002_proxmox_support.py
src/myriad/: config.py  main.py
src/myriad/core/: __init__.py  database.py  dependencies.py  security.py  templates.py
src/myriad/integrations/opnsense/: __init__.py  client.py
src/myriad/integrations/proxmox/: __init__.py  client.py
src/myriad/models/: __init__.py  base.py  host.py  hypervisor.py  integration.py  location.py  user.py
src/myriad/routers/: __init__.py  auth.py  dashboard.py  hosts.py  vms.py
src/myriad/schemas/: __init__.py  auth.py  host.py  location.py  vm.py
src/myriad/services/: __init__.py  host_service.py  location_service.py  proxmox_service.py  sync_service.py
templates/auth/: login.html  setup.html
templates/dashboard/: index.html
templates/hosts/: _detail_card.html  _table.html  detail.html  list.html
templates/layouts/: base.html
tests/: conftest.py
tests/integrations/proxmox/: __init__.py  test_client.py
tests/schemas/: test_auth.py
tests/services/: test_host_service.py  test_proxmox_service.py
